RelationalLangParser.py
# Generated from RelationalLang.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class RelationalLangParser ( Parser ):

    grammarFileName = "RelationalLang.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'struct'", "'extends'", "'is'", "'method'", 
                     "'end'", "'sub'", "'ref'", "'if'", "'else'", "'for'", 
                     "'in'", "'return'", "'new'", "'int'", "'float'", "'string'", 
                     "'table'", "'row'", "'column'", "'void'", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "'('", "')'", "'{'", "'}'", 
                     "','", "'.'", "':'", "'='", "'+'", "'-'", "'*'", "'/'", 
                     "'=='", "'!='", "'>'", "'<'", "'>='", "'<='" ]

    symbolicNames = [ "<INVALID>", "STRUCT", "EXTENDS", "IS", "METHOD", 
                      "END", "SUB", "REF", "IF", "ELSE", "FOR", "IN", "RETURN", 
                      "NEW", "TYPE_INT", "TYPE_FLOAT", "TYPE_STRING", "TYPE_TABLE", 
                      "TYPE_ROW", "TYPE_COLUMN", "TYPE_VOID", "ID", "INT", 
                      "FLOAT", "STRING", "COMMENT", "NL", "WS", "LPAREN", 
                      "RPAREN", "LBRACE", "RBRACE", "COMMA", "DOT", "COLON", 
                      "ASSIGN", "PLUS", "MINUS", "STAR", "SLASH", "EQ", 
                      "NEQ", "GT", "LT", "GE", "LE" ]

    RULE_program = 0
    RULE_structDecl = 1
    RULE_memberDecl = 2
    RULE_methodDecl = 3
    RULE_subroutineDecl = 4
    RULE_paramList = 5
    RULE_param = 6
    RULE_statement = 7
    RULE_assignStmt = 8
    RULE_pathExpr = 9
    RULE_funcCallStmt = 10
    RULE_methodCallStmt = 11
    RULE_ifStmt = 12
    RULE_forStmt = 13
    RULE_returnStmt = 14
    RULE_expr = 15
    RULE_exprList = 16
    RULE_typeDecl = 17
    RULE_literal = 18

    ruleNames =  [ "program", "structDecl", "memberDecl", "methodDecl", 
                   "subroutineDecl", "paramList", "param", "statement", 
                   "assignStmt", "pathExpr", "funcCallStmt", "methodCallStmt", 
                   "ifStmt", "forStmt", "returnStmt", "expr", "exprList", 
                   "typeDecl", "literal" ]

    EOF = Token.EOF
    STRUCT=1
    EXTENDS=2
    IS=3
    METHOD=4
    END=5
    SUB=6
    REF=7
    IF=8
    ELSE=9
    FOR=10
    IN=11
    RETURN=12
    NEW=13
    TYPE_INT=14
    TYPE_FLOAT=15
    TYPE_STRING=16
    TYPE_TABLE=17
    TYPE_ROW=18
    TYPE_COLUMN=19
    TYPE_VOID=20
    ID=21
    INT=22
    FLOAT=23
    STRING=24
    COMMENT=25
    NL=26
    WS=27
    LPAREN=28
    RPAREN=29
    LBRACE=30
    RBRACE=31
    COMMA=32
    DOT=33
    COLON=34
    ASSIGN=35
    PLUS=36
    MINUS=37
    STAR=38
    SLASH=39
    EQ=40
    NEQ=41
    GT=42
    LT=43
    GE=44
    LE=45

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(RelationalLangParser.EOF, 0)

        def structDecl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(RelationalLangParser.StructDeclContext)
            else:
                return self.getTypedRuleContext(RelationalLangParser.StructDeclContext,i)


        def subroutineDecl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(RelationalLangParser.SubroutineDeclContext)
            else:
                return self.getTypedRuleContext(RelationalLangParser.SubroutineDeclContext,i)


        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(RelationalLangParser.StatementContext)
            else:
                return self.getTypedRuleContext(RelationalLangParser.StatementContext,i)


        def NL(self, i:int=None):
            if i is None:
                return self.getTokens(RelationalLangParser.NL)
            else:
                return self.getToken(RelationalLangParser.NL, i)

        def getRuleIndex(self):
            return RelationalLangParser.RULE_program

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = RelationalLangParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 44
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 1440757058) != 0):
                self.state = 42
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [1]:
                    self.state = 38
                    self.structDecl()
                    pass
                elif token in [6]:
                    self.state = 39
                    self.subroutineDecl()
                    pass
                elif token in [8, 10, 12, 13, 21, 22, 23, 24, 28, 30]:
                    self.state = 40
                    self.statement()
                    pass
                elif token in [26]:
                    self.state = 41
                    self.match(RelationalLangParser.NL)
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 46
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 47
            self.match(RelationalLangParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StructDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STRUCT(self, i:int=None):
            if i is None:
                return self.getTokens(RelationalLangParser.STRUCT)
            else:
                return self.getToken(RelationalLangParser.STRUCT, i)

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(RelationalLangParser.ID)
            else:
                return self.getToken(RelationalLangParser.ID, i)

        def IS(self):
            return self.getToken(RelationalLangParser.IS, 0)

        def NL(self, i:int=None):
            if i is None:
                return self.getTokens(RelationalLangParser.NL)
            else:
                return self.getToken(RelationalLangParser.NL, i)

        def END(self):
            return self.getToken(RelationalLangParser.END, 0)

        def EXTENDS(self):
            return self.getToken(RelationalLangParser.EXTENDS, 0)

        def memberDecl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(RelationalLangParser.MemberDeclContext)
            else:
                return self.getTypedRuleContext(RelationalLangParser.MemberDeclContext,i)


        def methodDecl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(RelationalLangParser.MethodDeclContext)
            else:
                return self.getTypedRuleContext(RelationalLangParser.MethodDeclContext,i)


        def getRuleIndex(self):
            return RelationalLangParser.RULE_structDecl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStructDecl" ):
                return visitor.visitStructDecl(self)
            else:
                return visitor.visitChildren(self)




    def structDecl(self):

        localctx = RelationalLangParser.StructDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_structDecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 49
            self.match(RelationalLangParser.STRUCT)
            self.state = 50
            self.match(RelationalLangParser.ID)
            self.state = 53
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==2:
                self.state = 51
                self.match(RelationalLangParser.EXTENDS)
                self.state = 52
                self.match(RelationalLangParser.ID)


            self.state = 55
            self.match(RelationalLangParser.IS)
            self.state = 56
            self.match(RelationalLangParser.NL)
            self.state = 62
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 69206032) != 0):
                self.state = 60
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [21]:
                    self.state = 57
                    self.memberDecl()
                    pass
                elif token in [4]:
                    self.state = 58
                    self.methodDecl()
                    pass
                elif token in [26]:
                    self.state = 59
                    self.match(RelationalLangParser.NL)
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 64
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 65
            self.match(RelationalLangParser.END)
            self.state = 66
            self.match(RelationalLangParser.STRUCT)
            self.state = 67
            self.match(RelationalLangParser.NL)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MemberDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(RelationalLangParser.ID, 0)

        def COLON(self):
            return self.getToken(RelationalLangParser.COLON, 0)

        def typeDecl(self):
            return self.getTypedRuleContext(RelationalLangParser.TypeDeclContext,0)


        def NL(self):
            return self.getToken(RelationalLangParser.NL, 0)

        def getRuleIndex(self):
            return RelationalLangParser.RULE_memberDecl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMemberDecl" ):
                return visitor.visitMemberDecl(self)
            else:
                return visitor.visitChildren(self)




    def memberDecl(self):

        localctx = RelationalLangParser.MemberDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_memberDecl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 69
            self.match(RelationalLangParser.ID)
            self.state = 70
            self.match(RelationalLangParser.COLON)
            self.state = 71
            self.typeDecl()
            self.state = 72
            self.match(RelationalLangParser.NL)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MethodDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def METHOD(self, i:int=None):
            if i is None:
                return self.getTokens(RelationalLangParser.METHOD)
            else:
                return self.getToken(RelationalLangParser.METHOD, i)

        def ID(self):
            return self.getToken(RelationalLangParser.ID, 0)

        def LPAREN(self):
            return self.getToken(RelationalLangParser.LPAREN, 0)

        def RPAREN(self):
            return self.getToken(RelationalLangParser.RPAREN, 0)

        def NL(self, i:int=None):
            if i is None:
                return self.getTokens(RelationalLangParser.NL)
            else:
                return self.getToken(RelationalLangParser.NL, i)

        def END(self):
            return self.getToken(RelationalLangParser.END, 0)

        def paramList(self):
            return self.getTypedRuleContext(RelationalLangParser.ParamListContext,0)


        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(RelationalLangParser.StatementContext)
            else:
                return self.getTypedRuleContext(RelationalLangParser.StatementContext,i)


        def getRuleIndex(self):
            return RelationalLangParser.RULE_methodDecl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMethodDecl" ):
                return visitor.visitMethodDecl(self)
            else:
                return visitor.visitChildren(self)




    def methodDecl(self):

        localctx = RelationalLangParser.MethodDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_methodDecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 74
            self.match(RelationalLangParser.METHOD)
            self.state = 75
            self.match(RelationalLangParser.ID)
            self.state = 76
            self.match(RelationalLangParser.LPAREN)
            self.state = 78
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 4178048) != 0):
                self.state = 77
                self.paramList()


            self.state = 80
            self.match(RelationalLangParser.RPAREN)
            self.state = 81
            self.match(RelationalLangParser.NL)
            self.state = 86
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 1440756992) != 0):
                self.state = 84
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [8, 10, 12, 13, 21, 22, 23, 24, 28, 30]:
                    self.state = 82
                    self.statement()
                    pass
                elif token in [26]:
                    self.state = 83
                    self.match(RelationalLangParser.NL)
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 88
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 89
            self.match(RelationalLangParser.END)
            self.state = 90
            self.match(RelationalLangParser.METHOD)
            self.state = 91
            self.match(RelationalLangParser.NL)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SubroutineDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SUB(self, i:int=None):
            if i is None:
                return self.getTokens(RelationalLangParser.SUB)
            else:
                return self.getToken(RelationalLangParser.SUB, i)

        def ID(self):
            return self.getToken(RelationalLangParser.ID, 0)

        def LPAREN(self):
            return self.getToken(RelationalLangParser.LPAREN, 0)

        def RPAREN(self):
            return self.getToken(RelationalLangParser.RPAREN, 0)

        def NL(self, i:int=None):
            if i is None:
                return self.getTokens(RelationalLangParser.NL)
            else:
                return self.getToken(RelationalLangParser.NL, i)

        def END(self):
            return self.getToken(RelationalLangParser.END, 0)

        def paramList(self):
            return self.getTypedRuleContext(RelationalLangParser.ParamListContext,0)


        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(RelationalLangParser.StatementContext)
            else:
                return self.getTypedRuleContext(RelationalLangParser.StatementContext,i)


        def getRuleIndex(self):
            return RelationalLangParser.RULE_subroutineDecl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSubroutineDecl" ):
                return visitor.visitSubroutineDecl(self)
            else:
                return visitor.visitChildren(self)




    def subroutineDecl(self):

        localctx = RelationalLangParser.SubroutineDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_subroutineDecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 93
            self.match(RelationalLangParser.SUB)
            self.state = 94
            self.match(RelationalLangParser.ID)
            self.state = 95
            self.match(RelationalLangParser.LPAREN)
            self.state = 97
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 4178048) != 0):
                self.state = 96
                self.paramList()


            self.state = 99
            self.match(RelationalLangParser.RPAREN)
            self.state = 100
            self.match(RelationalLangParser.NL)
            self.state = 105
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 1440756992) != 0):
                self.state = 103
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [8, 10, 12, 13, 21, 22, 23, 24, 28, 30]:
                    self.state = 101
                    self.statement()
                    pass
                elif token in [26]:
                    self.state = 102
                    self.match(RelationalLangParser.NL)
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 107
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 108
            self.match(RelationalLangParser.END)
            self.state = 109
            self.match(RelationalLangParser.SUB)
            self.state = 110
            self.match(RelationalLangParser.NL)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def param(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(RelationalLangParser.ParamContext)
            else:
                return self.getTypedRuleContext(RelationalLangParser.ParamContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(RelationalLangParser.COMMA)
            else:
                return self.getToken(RelationalLangParser.COMMA, i)

        def getRuleIndex(self):
            return RelationalLangParser.RULE_paramList

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParamList" ):
                return visitor.visitParamList(self)
            else:
                return visitor.visitChildren(self)




    def paramList(self):

        localctx = RelationalLangParser.ParamListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_paramList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 112
            self.param()
            self.state = 117
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==32:
                self.state = 113
                self.match(RelationalLangParser.COMMA)
                self.state = 114
                self.param()
                self.state = 119
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def typeDecl(self):
            return self.getTypedRuleContext(RelationalLangParser.TypeDeclContext,0)


        def ID(self):
            return self.getToken(RelationalLangParser.ID, 0)

        def REF(self):
            return self.getToken(RelationalLangParser.REF, 0)

        def getRuleIndex(self):
            return RelationalLangParser.RULE_param

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParam" ):
                return visitor.visitParam(self)
            else:
                return visitor.visitChildren(self)




    def param(self):

        localctx = RelationalLangParser.ParamContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_param)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 121
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==7:
                self.state = 120
                self.match(RelationalLangParser.REF)


            self.state = 123
            self.typeDecl()
            self.state = 124
            self.match(RelationalLangParser.ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def assignStmt(self):
            return self.getTypedRuleContext(RelationalLangParser.AssignStmtContext,0)


        def NL(self):
            return self.getToken(RelationalLangParser.NL, 0)

        def funcCallStmt(self):
            return self.getTypedRuleContext(RelationalLangParser.FuncCallStmtContext,0)


        def methodCallStmt(self):
            return self.getTypedRuleContext(RelationalLangParser.MethodCallStmtContext,0)


        def ifStmt(self):
            return self.getTypedRuleContext(RelationalLangParser.IfStmtContext,0)


        def forStmt(self):
            return self.getTypedRuleContext(RelationalLangParser.ForStmtContext,0)


        def returnStmt(self):
            return self.getTypedRuleContext(RelationalLangParser.ReturnStmtContext,0)


        def getRuleIndex(self):
            return RelationalLangParser.RULE_statement

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatement" ):
                return visitor.visitStatement(self)
            else:
                return visitor.visitChildren(self)




    def statement(self):

        localctx = RelationalLangParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_statement)
        try:
            self.state = 144
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,13,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 126
                self.assignStmt()
                self.state = 127
                self.match(RelationalLangParser.NL)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 129
                self.funcCallStmt()
                self.state = 130
                self.match(RelationalLangParser.NL)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 132
                self.methodCallStmt()
                self.state = 133
                self.match(RelationalLangParser.NL)
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 135
                self.ifStmt()
                self.state = 136
                self.match(RelationalLangParser.NL)
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 138
                self.forStmt()
                self.state = 139
                self.match(RelationalLangParser.NL)
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 141
                self.returnStmt()
                self.state = 142
                self.match(RelationalLangParser.NL)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssignStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def pathExpr(self):
            return self.getTypedRuleContext(RelationalLangParser.PathExprContext,0)


        def ASSIGN(self):
            return self.getToken(RelationalLangParser.ASSIGN, 0)

        def expr(self):
            return self.getTypedRuleContext(RelationalLangParser.ExprContext,0)


        def getRuleIndex(self):
            return RelationalLangParser.RULE_assignStmt

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssignStmt" ):
                return visitor.visitAssignStmt(self)
            else:
                return visitor.visitChildren(self)




    def assignStmt(self):

        localctx = RelationalLangParser.AssignStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_assignStmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 146
            self.pathExpr()
            self.state = 147
            self.match(RelationalLangParser.ASSIGN)
            self.state = 148
            self.expr(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PathExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(RelationalLangParser.ID)
            else:
                return self.getToken(RelationalLangParser.ID, i)

        def DOT(self, i:int=None):
            if i is None:
                return self.getTokens(RelationalLangParser.DOT)
            else:
                return self.getToken(RelationalLangParser.DOT, i)

        def getRuleIndex(self):
            return RelationalLangParser.RULE_pathExpr

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPathExpr" ):
                return visitor.visitPathExpr(self)
            else:
                return visitor.visitChildren(self)




    def pathExpr(self):

        localctx = RelationalLangParser.PathExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_pathExpr)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 150
            self.match(RelationalLangParser.ID)
            self.state = 155
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,14,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 151
                    self.match(RelationalLangParser.DOT)
                    self.state = 152
                    self.match(RelationalLangParser.ID) 
                self.state = 157
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,14,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FuncCallStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(RelationalLangParser.ID, 0)

        def LPAREN(self):
            return self.getToken(RelationalLangParser.LPAREN, 0)

        def RPAREN(self):
            return self.getToken(RelationalLangParser.RPAREN, 0)

        def exprList(self):
            return self.getTypedRuleContext(RelationalLangParser.ExprListContext,0)


        def getRuleIndex(self):
            return RelationalLangParser.RULE_funcCallStmt

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFuncCallStmt" ):
                return visitor.visitFuncCallStmt(self)
            else:
                return visitor.visitChildren(self)




    def funcCallStmt(self):

        localctx = RelationalLangParser.FuncCallStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_funcCallStmt)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 158
            self.match(RelationalLangParser.ID)
            self.state = 159
            self.match(RelationalLangParser.LPAREN)
            self.state = 161
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 1373642752) != 0):
                self.state = 160
                self.exprList()


            self.state = 163
            self.match(RelationalLangParser.RPAREN)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MethodCallStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self):
            return self.getTypedRuleContext(RelationalLangParser.ExprContext,0)


        def DOT(self):
            return self.getToken(RelationalLangParser.DOT, 0)

        def ID(self):
            return self.getToken(RelationalLangParser.ID, 0)

        def LPAREN(self):
            return self.getToken(RelationalLangParser.LPAREN, 0)

        def RPAREN(self):
            return self.getToken(RelationalLangParser.RPAREN, 0)

        def exprList(self):
            return self.getTypedRuleContext(RelationalLangParser.ExprListContext,0)


        def getRuleIndex(self):
            return RelationalLangParser.RULE_methodCallStmt

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMethodCallStmt" ):
                return visitor.visitMethodCallStmt(self)
            else:
                return visitor.visitChildren(self)




    def methodCallStmt(self):

        localctx = RelationalLangParser.MethodCallStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_methodCallStmt)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 165
            self.expr(0)
            self.state = 166
            self.match(RelationalLangParser.DOT)
            self.state = 167
            self.match(RelationalLangParser.ID)
            self.state = 168
            self.match(RelationalLangParser.LPAREN)
            self.state = 170
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 1373642752) != 0):
                self.state = 169
                self.exprList()


            self.state = 172
            self.match(RelationalLangParser.RPAREN)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IfStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IF(self, i:int=None):
            if i is None:
                return self.getTokens(RelationalLangParser.IF)
            else:
                return self.getToken(RelationalLangParser.IF, i)
